--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "elastic_distances"
+name = "tsdistances"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,4 +8,5 @@ dashmap = "5.5.3"
 lazy_static = "1.4.0"
 parking_lot = "0.12.3"
 pyo3 = "0.21.2"
+rand = "0.8.5"
 rayon = "1.10.0"
