--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ctrlc = "3.4.4"
 dashmap = "5.5.3"
 lazy_static = "1.4.0"
 parking_lot = "0.12.3"
