--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ ctrlc = "3.4.4"
 dashmap = "5.5.3"
 lazy_static = "1.4.0"
 parking_lot = "0.12.3"
-pyo3 = "0.21.2"
+pyo3 = { version = "0.21.2", features = ["extension-module"] }
 rand = "0.8.5"
 rayon = "1.10.0"
 rustfft = "6.2.0"
