added python api for euclidean, erp, lcss, dtw

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ rustfft = "6.2.0"
 
 [lib]
 crate-type = ["cdylib"]
-path = "tsdistances/core/lib.rs"
+name = "tsdistances"
 
 [profile.dev]
 debug = true
