--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -156,13 +156,18 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    # if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
       - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          command: upload
-          args: --non-interactive --skip-existing wheels-*/*
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
+        # uses: PyO3/maturin-action@v1
+        # env:
+        #   MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        # with:
+        #   command: upload
+        #   args: --non-interactive --skip-existing wheels-*/*
