--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -138,33 +138,32 @@ jobs:
   #         name: wheels-macos-${{ matrix.platform.target }}
   #         path: dist
 
-  sdist:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build sdist
-        uses: PyO3/maturin-action@v1
-        with:
-          command: sdist
-          args: --out dist
-      - name: Upload sdist
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-sdist
-          path: dist
+  # sdist:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Build sdist
+  #       uses: PyO3/maturin-action@v1
+  #       with:
+  #         command: sdist
+  #         args: --out dist
+  #     - name: Upload sdist
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: wheels-sdist
+  #         path: dist
 
   release:
     name: Release
     runs-on: ubuntu-latest
-    # if: startsWith(github.ref, 'refs/tags/')
-    needs: [linux, sdist] #, musllinux, windows, macos, 
+    # if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [linux] #, musllinux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
       - name: Publish to PyPI
-        # uses: PyO3/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        run: maturin upload --skip-existing *
-        # with:
-        #   command: upload
-        #   args: --non-interactive --skip-existing wheels-*/*
+        with:
+          command: upload
+          args: --non-interactive --skip-existing wheels-*/*
