--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -166,4 +166,4 @@ jobs:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: upload
-          args: --non-interactive --skip-existing wheels-*/*
+          args: -u __token__ --non-interactive --skip-existing wheels-*/*
