--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,11 +22,19 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
+            target: x86_64
+          - os: ubuntu-latest
+            target: x86
+          - os: ubuntu-latest
+            target: aarch64
           - os: windows-latest
-            target: x86_64-pc-windows-msvc
-          - os: macos-latest
-            target: x86_64-apple-darwin
+            target: x64
+          - os: windows-latest
+            target: x86
+          - os: macos-12
+            target: x86_64
+          - os: macos-14
+            target: aarch64
     steps:
       - uses: actions/checkout@v4
       - name: Install toolchains
