--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+tool = { rye = { dev-dependencies = [
+    "pip>=24.1.2",
+    "pytest>=8.3.1",
+    "aeon>=0.9.0",
+] } }
 [project]
 name = "tsdistances"
 version = "0.0.4"
