--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,6 +26,8 @@ jobs:
           - runner: ubuntu-latest
             target: aarch64
     steps:
+      - name: Change permissions
+        run: sudo chown -R $USER:$USER /home/github/actions-runner/_work/{REPOSITORY_NAME_HERE}
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
