--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
+catch22 = { git = "https://github.com/albertoazzari/catch22_rs.git", version = "0.1.0" }
 ctrlc = "3.4.4"
 lazy_static = "1.4.0"
 parking_lot = "0.12.3"
