--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   linux:
-    runs-on: thething
+    runs-on: self-hosted
     strategy:
       matrix:
         platform:
@@ -42,7 +42,7 @@ jobs:
           path: dist
 
   musllinux:
-    runs-on: thething
+    runs-on: self-hosted
     strategy:
       matrix:
         platform:
@@ -69,7 +69,7 @@ jobs:
           path: dist
 
   windows:
-    runs-on: thething
+    runs-on: self-hosted
     strategy:
       matrix:
         platform:
@@ -94,7 +94,7 @@ jobs:
           path: dist
 
   macos:
-    runs-on: thething
+    runs-on: self-hosted
     strategy:
       matrix:
         platform:
@@ -120,7 +120,7 @@ jobs:
           path: dist
 
   sdist:
-    runs-on: thething
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -136,7 +136,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: thething
+    runs-on: self-hosted
     needs: [linux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
