--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,152 @@
+# name: CI
+
+# on:
+#   push:
+#     branches:
+#       - main
+#       - master
+#     tags:
+#       - '*'
+#   pull_request:
+#   workflow_dispatch:
+
+# permissions:
+#   contents: read
+
+# jobs:
+#   linux:
+#     runs-on: self-hosted
+#     strategy:
+#       matrix:
+#         platform:
+#           - runner: ubuntu-latest
+#             target: x86_64
+#           - runner: ubuntu-latest
+#             target: aarch64
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: 3.12.7
+#       - name: Build wheels
+#         uses: PyO3/maturin-action@v1
+#         with:
+#           target: ${{ matrix.platform.target }}
+#           args: --release --out dist --find-interpreter
+#           sccache: 'true'
+#           manylinux: auto
+#       - name: Upload wheels
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: wheels-linux-${{ matrix.platform.target }}
+#           path: dist
+
+#   musllinux:
+#     runs-on: self-hosted
+#     strategy:
+#       matrix:
+#         platform:
+#           - runner: ubuntu-latest
+#             target: x86_64
+#           - runner: ubuntu-latest
+#             target: aarch64
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: 3.12.7
+#       - name: Build wheels
+#         uses: PyO3/maturin-action@v1
+#         with:
+#           target: ${{ matrix.platform.target }}
+#           args: --release --out dist --find-interpreter
+#           sccache: 'true'
+#           manylinux: musllinux_1_2
+#       - name: Upload wheels
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: wheels-musllinux-${{ matrix.platform.target }}
+#           path: dist
+
+#   windows:
+#     runs-on: self-hosted
+#     strategy:
+#       matrix:
+#         platform:
+#           - runner: windows-latest
+#             target: x64
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: 3.12.7
+#           architecture: ${{ matrix.platform.target }}
+#       - name: Build wheels
+#         uses: PyO3/maturin-action@v1
+#         with:
+#           target: ${{ matrix.platform.target }}
+#           args: --release --out dist --find-interpreter
+#           sccache: 'true'
+#       - name: Upload wheels
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: wheels-windows-${{ matrix.platform.target }}
+#           path: dist
+
+#   macos:
+#     runs-on: self-hosted
+#     strategy:
+#       matrix:
+#         platform:
+#           - runner: macos-12
+#             target: x86_64
+#           - runner: macos-14
+#             target: aarch64
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: 3.12.7
+#       - name: Build wheels
+#         uses: PyO3/maturin-action@v1
+#         with:
+#           target: ${{ matrix.platform.target }}
+#           args: --release --out dist --find-interpreter
+#           sccache: 'true'
+#       - name: Upload wheels
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: wheels-macos-${{ matrix.platform.target }}
+#           path: dist
+
+#   sdist:
+#     runs-on: self-hosted
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: Build sdist
+#         uses: PyO3/maturin-action@v1
+#         with:
+#           command: sdist
+#           args: --out dist
+#       - name: Upload sdist
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: wheels-sdist
+#           path: dist
+
+#   release:
+#     name: Release
+#     runs-on: self-hosted
+#     needs: [linux, windows, macos, sdist]
+#     steps:
+#       - uses: actions/download-artifact@v4
+#       - name: Publish to PyPI
+#         uses: PyO3/maturin-action@v1
+#         env:
+#           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+#         with:
+#           command: upload
+#           args: --non-interactive --skip-existing wheels-*/*
 name: CI
 
 on:
@@ -19,15 +168,23 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: x86_64
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
+            target: x86
+          - runner: ubuntu-22.04
             target: aarch64
+          - runner: ubuntu-22.04
+            target: armv7
+          - runner: ubuntu-22.04
+            target: s390x
+          - runner: ubuntu-22.04
+            target: ppc64le
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.12.7
+          python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -46,15 +203,19 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
             target: x86_64
-          - runner: ubuntu-latest
+          - runner: ubuntu-22.04
+            target: x86
+          - runner: ubuntu-22.04
             target: aarch64
+          - runner: ubuntu-22.04
+            target: armv7
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.12.7
+          python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -75,11 +236,13 @@ jobs:
         platform:
           - runner: windows-latest
             target: x64
+          - runner: windows-latest
+            target: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.12.7
+          python-version: 3.x
           architecture: ${{ matrix.platform.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
@@ -98,7 +261,7 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: macos-12
+          - runner: macos-13
             target: x86_64
           - runner: macos-14
             target: aarch64
@@ -106,7 +269,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.12.7
+          python-version: 3.x
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -120,7 +283,7 @@ jobs:
           path: dist
 
   sdist:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -136,11 +299,24 @@ jobs:
 
   release:
     name: Release
-    runs-on: self-hosted
-    needs: [linux, windows, macos, sdist]
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
+    needs: [linux, musllinux, windows, macos, sdist]
+    permissions:
+      # Use to sign the release artifacts
+      id-token: write
+      # Used to upload release artifacts
+      contents: write
+      # Used to generate artifact attestation
+      attestations: write
     steps:
       - uses: actions/download-artifact@v4
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: 'wheels-*/*'
       - name: Publish to PyPI
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
