--- a/gpu/Cargo.toml
+++ b/gpu/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dashmap = "6.0.1"
-krnl = "0.1.1"
+dashmap = "6.1.0"
+krnl = {git="https://github.com/albertoazzari/krnl.git"}
 lazy_static = "1.5.0"
 rand = "0.8.5"
 rustfft = "6.2.0"
-vulkano = "0.34.0"
+vulkano = {git="https://github.com/albertoazzari/vulkano.git"}
