--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tsdistances"
-version = "0.1."
+version = "0.1.0"
 authors = [
   { name="Alberto Azzari", email="alberto.azzari@univr.it" },
   { name="Andrea Cracco", email="andrea.cracco@univr.it" },
