--- a/gpu/Cargo.toml
+++ b/gpu/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+csv = "1.3.1"
 dashmap = "6.1.0"
 krnl = {git="https://github.com/albertoazzari/krnl.git"}
 lazy_static = "1.5.0"
