Enhance distance functions in Python module and update Rust toolchain
- Re-enable previously commented-out distance functions in the Python module:
  - lcss
  - dtw
  - ddtw
  - wdtw
  - wddtw
  - adtw
  - msm
  - twe
  - sb
  - mp

- Update submodule 'tsdistances_gpu' to a new commit.

- Add a new Rust toolchain configuration file specifying the nightly channel and required components.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,17 @@ edition = "2024"
 [dependencies]
 catch22 = { git = "https://github.com/albertoazzari/catch22_rs.git", version = "0.1.0" }
 ctrlc = "3.4.7"
-lazy_static = "1.5.0"
 parking_lot = "0.12.4"
 pyo3 = { version = "0.23.5", features = ["extension-module"] }
 rand = "0.8.5"
 rayon = "1.10.0"
 rustfft = "6.3.0"
-tsdistances_gpu = { path = "tsdistances_gpu" }
+tsdistances_gpu = { path = "tsdistances_gpu/" }
 
 [lib]
 crate-type = ["cdylib"]
 name = "tsdistances"
 
-[profile.dev]
-debug = true
-
 [profile.release]
-debug = false
+lto = true
+codegen-units = 1
