--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          rust-toolchain: nightly-2024-11-22
+          rustup-components: "rust-src rustc-dev llvm-tools"
           manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -72,6 +74,8 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          rust-toolchain: nightly-2024-11-22
+          rustup-components: "rust-src rustc-dev llvm-tools"
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -87,6 +91,8 @@ jobs:
         with:
           command: sdist
           args: --out dist
+          rust-toolchain: nightly-2024-11-22
+          rustup-components: "rust-src rustc-dev llvm-tools"
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
